[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/dice.png" type="Texture" id=1]
[ext_resource path="res://scenes/Dice/Test_Dice.gd" type="Script" id=2]
[ext_resource path="res://sfx/GWJ32_DiceHandle_2.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="Dice" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Dice_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="Tween_Size" type="Tween" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="area_entered" from="." to="." method="_on_Dice_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Dice_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Dice_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Dice_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Dice_mouse_exited"]
